tests/NormalTests/paczka1/fuzzy1/35350882.err
Error in line 3: P27uxw A829 55,9
Error in line 6: P27uxw S42 53,2
Error in line 8: P27uxw A883 58,6
Error in line 18: fjgT A883 80,6
Error in line 17: P27uxw A870 51,5
Error in line 19: fjgT A870 52,3
Error in line 32: N7dzg9OyXjd A883 19,4
Error in line 34: N7dzg9OyXjd S42 14,6
Error in line 36: N7dzg9OyXjd A870 30,9
